- show spectrum and imd markers on click rather than requiring run
- serious refactor of viewmodel copying
- add Test menu for the graph popup commands
- rename Start to Once when there is a Run button
- support up to 4 data summary boxes to spectrum test (2 more than previous)
- repair data summary box color match to line color
v 1.2.7 2/1/26
- improve menu position and other esthetics
- add blackman-harris 7 window to the window list, rename blackman to blackman-3
- repaired: renamed files could not be loaded with the new Zip code
- fix Response plots color not updating immediately when palette colors change
- hook up second Y axis settings for group delay
- reduce the relay delay time after empirical testing
- reduce graph limit update defn for the GUI upgrade and to enable multi-pin/fit
- implement pinall and fitall for popup menu on graphs
- refactor Actions to generic finally
- add snapshot of data option
- move residual to a separate axis and remove scaling
- upgrade group delay creation
- add ability to disable phase display
- set contrast color for plot headings
v 1.2.6 1/24/26
- add a QA40x readme on ports
- read the dc supply voltage, dc current, and temperature on device init
- put them all upper-right updating on each measurement
- have scope use bin-center frequencies
- add ability to edit Gotten plot name
- add a default data folder setting
- finally fix phase upwrapping
- add early group delay display
- try out second Y axis for group delay
- rewrite/repair averaging for Frequency Response tests
- update frequency response messaging
- add Shift-Click to on/off a group of legend labels
- switch to Release x64 instead of Release Any ?
v 1.2.5 1/18/2026
- add space to run/start/get... buttons
- update mouse cursor in frequency response test when test runs
- add WhatsNew file to the delivery
- add a Residual display option to the Scope test
- don't allow page switching during a run
- improve scope Fit and PinToRange to support 5 digit (smaller) values