@@ -23,6 +23,8 @@
 <p>For the tests which have a run once (Start) option that is now named Once.&nbsp;I think that&#39;s more user-friendly since I constantly found myself trying to remember which was which between Run and Start.</p>
 <h2>Support 4 Data Summary Boxes in Spectrum</h2>
 <p>I found myself wanting to compare 4 plots a lot. So... This may get expanded to no limit. While there I fixed the boundary to plot line color matching.</p>
+<h2>Added Output Gain option</h2>
+<p>If you have an amplifier gain/buffer block at the generator output to enable higher output voltages, enter the gain for that in Settings. This will automatically adjust all operations for expected additional output gain. </p>
 <h5>__________________________________________________________________________________________________________</h5>
 <h1>&nbsp;</h1>
 <h1>---- Older&nbsp; Entries ----</h1>
