@@ -4,8 +4,8 @@ https://go.microsoft.com/fwlink/?LinkID=208121.
 -->
 <Project>
   <PropertyGroup>
-    <ApplicationRevision>4</ApplicationRevision>
-    <ApplicationVersion>1.2.7.*</ApplicationVersion>
+    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationVersion>1.2.8.*</ApplicationVersion>
     <BootstrapperEnabled>False</BootstrapperEnabled>
     <Configuration>Release</Configuration>
     <CreateWebPageOnPublish>True</CreateWebPageOnPublish>
